New paths are indicated

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="card">
             <div class="product-img-block">
                 <div class="main-img-wrap">
-                    <img id="main-img" class="main-img" src="./assets/image/cup.png" alt="cup">
+                    <img id="mainImg" class="main-img" src="./assets/image/main-cup-1/main-cup-1-blue.png" alt="cup">
                 </div>
                 <div class="preview-wrapper">
-                    <div class="preview selected" onclick="changeImage('./assets/image/cup.png')">
+                    <div class="preview selected" onclick="changeImage('./assets/image/main-cup-1/main-cup-1-blue.png')">
                         <img src="./assets/image/cup-miniature-1.png" alt="cup-miniature-1">
                     </div>
                     <div class="preview" onclick="changeImage('./assets/image/cup-2.png')">
